--- a/Report/Architecture/SequenceDiagramMovement.tex
+++ b/Report/Architecture/SequenceDiagramMovement.tex
@@ -5,6 +5,6 @@ Every player have then earlier made an eventListener that listens for changes, s
 
 \begin{figure}
 	\centering
-	\includegraphics[width=130mm]{images/SquenceDiagramMovement.PNG}
+	\includegraphics[width=0.8\textwidth]{images/SquenceDiagramMovement.PNG}
 	\caption{Sequence Diagram for movement of player \label{SquenceDiagramMovement}}
 \end{figure}
