Fixed after Anders comments

--- a/Report/Architecture/SequenceDiagramStartgame.tex
+++ b/Report/Architecture/SequenceDiagramStartgame.tex
@@ -1,6 +1,6 @@
 \section{Sequence Diagram for start game}
 
-On \ref{SequenceDiagram}the sequence of how to create a new game. This flow just make a single player game, but another player can easily join then the host is in the lobby. The flow is simple but need some user input to be compleated. The fastest way to create a game and start it takes 4 user input where open the app counts as one input. 
+On \ref{SequenceDiagram}the sequence of how to create a new game. The flow shown shows how to create a single player game, but another player can easily join then the host is in the lobby. The flow is simple but need some user input to be completed. The fastest way to create a game and start it takes four user input including opening the app.
 
 \begin{figure}
 	\centering
